@@ -1,3 +1,7 @@
+2013-11-05  Kris Van Hees <kris.van.hees@oracle.com>
+
+	* test/unittest/builtinvar/tst.errno2.d: Test errno value in syscall.
+
 2013-11-04  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libproc/Pcontrol.c (Pcreate): Fix use-after-free.
